--- a/index.html
+++ b/index.html
@@ -53,17 +53,28 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning in SQL</a></h2>
-									<p>In this project raw housing data is cleaned in SQL Server</p>
+									<h2><a href="#">Netflix Exploratory Data Analysis<br />
+									</a></h2>
 								</header>
-								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/adnanulchowdhury/Netflix_Exploratory_Data_Analysis/blob/main/netflix_eda.ipynb" class="image fit"><img src="images/Amzlogo.png" alt="" /></a>
+								<p>This is an exploratory data analysis project based on Netflix Streaming Service dataset.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/adnanulchowdhury/DAPortfolioProjects/blob/main/Data_Cleaning_Portfolio_Project_SQL.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/adnanulchowdhury/Netflix_Exploratory_Data_Analysis/blob/main/netflix_eda.ipynb" class="button">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="#">Data Cleaning in SQL</a></h2>
+										<p>In this project raw housing data is cleaned in SQL Server</p>
+									</header>
+									<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/adnanulchowdhury/DAPortfolioProjects/blob/main/Data_Cleaning_Portfolio_Project_SQL.sql" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/adnanulchowdhury/DAPortfolioProjects/blob/main/COVID-19_Portfolio_Project_SQL_Data_Exploration_Script.sql">Data Exploration in SQL<br />
@@ -95,17 +106,6 @@
 									<p>This project is about what variables affect the gross revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://nbviewer.org/github/adnanulchowdhury/DAPortfolioProjects/blob/main/Movie_Correlation_Project.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Amazon Web Scraper With Python<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/Amzlogo.png" alt="" /></a>
-									<p>In this project data is scraped from Amazon website to analyze prices of products.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
