--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2><a href="#">Netflix Exploratory Data Analysis<br />
 									</a></h2>
 								</header>
-								<a href="https://github.com/adnanulchowdhury/Netflix_Exploratory_Data_Analysis/blob/main/netflix_eda.ipynb" class="image fit"><img src="images/Amzlogo.png" alt="" /></a>
+								<a href="https://github.com/adnanulchowdhury/Netflix_Exploratory_Data_Analysis/blob/main/netflix_eda.ipynb" class="image fit"><img src="images/eda_graph.png" alt="" /></a>
 								<p>This is an exploratory data analysis project based on Netflix Streaming Service dataset.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/adnanulchowdhury/Netflix_Exploratory_Data_Analysis/blob/main/netflix_eda.ipynb" class="button">View Project</a></li>
