--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<h2><a href="https://nbviewer.org/github/adnanulchowdhury/DAPortfolioProjects/blob/main/Movie_Correlation_Project.ipynb">Movie Correlation With Python<br />
 										</a></h2>
 									</header>
-									<a href="https://nbviewer.org/github/adnanulchowdhury/DAPortfolioProjects/blob/main/Movie_Correlation_Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
+									<a href="https://nbviewer.org/github/adnanulchowdhury/DAPortfolioProjects/blob/main/Movie_Correlation_Project.ipynb" class="image fit"><img src="images/movie_correlation.png" alt="" /></a>
 									<p>This project is about what variables affect the gross revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://nbviewer.org/github/adnanulchowdhury/DAPortfolioProjects/blob/main/Movie_Correlation_Project.ipynb" class="button">View Project</a></li>
